@@ -1,12 +1,8 @@
 package com.fpt.pe.configs;
 
-import static org.springframework.http.HttpMethod.DELETE;
-import static org.springframework.http.HttpMethod.GET;
-import static org.springframework.http.HttpMethod.POST;
-import static org.springframework.http.HttpMethod.PUT;
-
 import com.fpt.pe.filters.JwtTokenFilter;
 import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
@@ -39,6 +35,17 @@ public class WebSecurityConfig {
     @Value("${api.prefix}")
     private String apiPrefix;
 
+    private String[] publicEndpoints = {
+        "/graphiql", "/graphql", "/error",
+        "/v3/api-docs/**", "/v3/api-docs.yaml", "/v3/api-docs/swagger-config",
+        "/swagger-ui/**", "/swagger-ui.html",
+        apiPrefix + "/swagger-ui/**",
+        apiPrefix + "/swagger-ui.html",
+        apiPrefix + "/api-docs/**",
+        "/custom-swagger-ui/**",
+        "/actuator/**"
+    };
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
@@ -50,59 +57,16 @@ public class WebSecurityConfig {
                 .authenticationEntryPoint(authenticationEntryPoint)
                 .accessDeniedHandler(accessDeniedHandler))
             .authorizeHttpRequests(auth -> auth
-                // Authentication endpoints
                 .requestMatchers(
                     String.format("%s/auth/login", apiPrefix),
-                    String.format("%s/auth/register", apiPrefix)
+                    String.format("%s/auth/register", apiPrefix),
+                    String.format("%s/blind-boxes/**", apiPrefix),
+                    String.format("%s/categories/**", apiPrefix),
+                    String.format("%s/sys-accounts/**", apiPrefix)
                 ).permitAll()
-
-                // Public API endpoints
-                .requestMatchers(GET,
-                                 String.format("%s/blind-boxes/**", apiPrefix),
-                                 String.format("%s/categories/**", apiPrefix),
-                                 String.format("%s/sys-accounts/**", apiPrefix)
-                ).permitAll()
-
-                // Require ADMIN role for POST operations
-                .requestMatchers(POST,
-                                 String.format("%s/roles/**", apiPrefix),
-                                 String.format("%s/categories/**", apiPrefix),
-                                 String.format("%s/accounts/register", apiPrefix),
-                                 String.format("%s/orchids/**", apiPrefix)
-                ).hasAnyRole("ADMIN")
-
-                // Require ADMIN role for PUT operations
-//                .requestMatchers(PUT,
-//                                 String.format("%s/roles/**", apiPrefix),
-//                                 String.format("%s/categories/**", apiPrefix),
-//                                 String.format("%s/orchids/**", apiPrefix)
-//                ).permitAll()
-                //.hasAnyRole("ADMIN")
-
-                // Require ADMIN role for DELETE operations
-                .requestMatchers(DELETE,
-                                 String.format("%s/roles/**", apiPrefix),
-                                 String.format("%s/categories/**", apiPrefix),
-                                 String.format("%s/orchids/**", apiPrefix)
-                ).permitAll()
-                //.hasAnyRole("ADMIN")
-
-                // Required Authenticated User
-                .requestMatchers(GET,
-                                 String.format("%s/accounts/me", apiPrefix)
-                ).authenticated()
 
                 // Swagger UI and API docs
-                .requestMatchers(
-                    "/graphiql", "/graphql", "/error",
-                    "/v3/api-docs/**", "/v3/api-docs.yaml", "/v3/api-docs/swagger-config",
-                    "/swagger-ui/**", "/swagger-ui.html",
-                    apiPrefix + "/swagger-ui/**",
-                    apiPrefix + "/swagger-ui.html",
-                    apiPrefix + "/api-docs/**",
-                    "/custom-swagger-ui/**",
-                    "/actuator/**"
-                ).permitAll()
+                .requestMatchers(publicEndpoints).permitAll()
 
                 // All other endpoints require authentication
                 .anyRequest().authenticated())
@@ -117,28 +81,13 @@ public class WebSecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Allow your Vercel domain and localhost for development
         configuration.setAllowedOrigins(Arrays.asList(
             "http://localhost:5173",
-            "http://localhost:3000",
-            "http://127.0.0.1:5173",
-            "http://127.0.0.1:3000"
+            "http://127.0.0.1:5173"
         ));
 
-        // Allow common HTTP methods
-        configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"));
-
-        // Allow all headers
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "X-Requested-With",
-            "Accept",
-            "Origin",
-            "Access-Control-Request-Method",
-            "Access-Control-Request-Headers"));
-
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setExposedHeaders(Arrays.asList(
             "Access-Control-Allow-Origin",
